DataviewsCard - basic view

--- a/src/__new/js/view/widgets/CustomViewsWidget/CustomViewsWidget.css
+++ b/src/__new/js/view/widgets/CustomViewsWidget/CustomViewsWidget.css
@@ -1,13 +1,18 @@
 #floater-custom-views-widget {
-	right: 10rem;
-	top: 10rem;
-	min-height: 30rem;
-	min-width: 40rem;
+	right: 15%;
+	top: 15%;
+	min-height: 70%;
+	max-height: 100%;
+	min-width: 70%;
+	max-width: 100%;
+
+	background-image: linear-gradient(to bottom, transparent 0rem, transparent 2.3rem, rgba(233,235,237,.95) 2.3rem, rgba(233,235,237,.95) 100%);
 }
 
 #floater-custom-views-widget .floater-body {
-	height: calc(100% - 2.8rem);
+	height: calc(100% - 2.6rem);
 	padding: .5rem;
+	background: rgba(233,235,237,1);
 }
 
 #floater-custom-views-widget .custom-views-content {
