--- a/src/__new/js/view/widgets/CustomViewsWidget/DataviewCard/DataviewCard.html
+++ b/src/__new/js/view/widgets/CustomViewsWidget/DataviewCard/DataviewCard.html
@@ -1,7 +1,7 @@
 <div id="{{id}}" class="dataview-card">
 	<div class="dataview-card-preview"></div>
 	<div class="dataview-card-text">
-		<span>{{name}}</span>
+		<h3>{{name}}</h3>
 		<p>{{description}}</p>
 	</div>
 	<div class="dataview-card-tools"></div>
