--- a/src/__new/js/view/widgets/CustomViewsWidget/CustomViewsWidget.css
+++ b/src/__new/js/view/widgets/CustomViewsWidget/CustomViewsWidget.css
@@ -1,16 +1,18 @@
 #floater-custom-views-widget {
 	right: 15%;
 	top: 15%;
-	min-height: 70%;
+	min-height: 30rem;
+	height: 70%;
 	max-height: 100%;
-	min-width: 70%;
+	min-width: 40rem;
+	width: 70%;
 	max-width: 100%;
 
 	background-image: linear-gradient(to bottom, transparent 0rem, transparent 2.3rem, rgba(233,235,237,.95) 2.3rem, rgba(233,235,237,.95) 100%);
 }
 
 #floater-custom-views-widget .floater-body {
-	height: calc(100% - 2.6rem);
+	height: calc(100% - 3rem);
 	padding: .5rem;
 	background: rgba(233,235,237,1);
 }
