--- a/src/__new/js/view/widgets/CustomViewsWidget/DataviewCard/DataviewCard.html
+++ b/src/__new/js/view/widgets/CustomViewsWidget/DataviewCard/DataviewCard.html
@@ -4,5 +4,12 @@
 		<h3>{{name}}</h3>
 		<p>{{description}}</p>
 	</div>
-	<div class="dataview-card-tools"></div>
+	<div class="dataview-card-tools">
+		<div class="dataview-card-buttons"></div>
+		<div class="dataview-card-icons">
+			<i class="fa fa-link" aria-hidden="true"></i>
+			<i class="fa fa-pencil-square-o disabled" aria-hidden="true"></i>
+			<i class="fa fa-trash-o disabled" aria-hidden="true"></i>
+		</div>
+	</div>
 </div>
