It is possible to choose language when saving dataview

--- a/src/__new/js/view/widgets/SharingWidget/SharingWidget.html
+++ b/src/__new/js/view/widgets/SharingWidget/SharingWidget.html
@@ -14,6 +14,15 @@
 			<textarea name="text" id="sharing-description" cols="30" rows="3"></textarea>
 		</label>
 	</div>
+	<div class="widget-form-row">
+		<label>
+			<span>{{langLabel}}</span>
+			<select id="sharing-lang">
+				<option value="en">EN</option>
+				<option value="cz">CZ</option>
+			</select>
+		</label>
+	</div>
 </div>
 <div class="widget-section">
 	<h5>{{permissionsTitle}}</h5>
