--- a/src/__new/js/view/widgets/CustomViewsWidget/DataviewCard/DataviewCard.css
+++ b/src/__new/js/view/widgets/CustomViewsWidget/DataviewCard/DataviewCard.css
@@ -18,8 +18,6 @@
 .dataview-card-text {
 	flex: 1;
 	padding: 0 2rem 0 .8rem;
-	height: 6rem;
-	overflow: hidden;
 }
 .dataview-card-text > h3 {
 	font-size: 1.1rem;
@@ -33,7 +31,7 @@
 }
 .dataview-card-tools {
 	flex-basis: 7rem;
-	height: 6rem;
+	height: 100%;
 	align-self: center;
 	align-items: flex-end;
 	display: flex;
