new widget header

--- a/src/__new/js/view/settings/Settings.css
+++ b/src/__new/js/view/settings/Settings.css
@@ -47,6 +47,12 @@
 .tool-window-header .window-close:hover {
 	cursor: pointer;
 }
+.tool-window-tools-container {
+	position: absolute;
+	right: 0;
+	top: 0;
+	height: 100%;
+}
 
 /* body */
 .tool-window-body {
