--- a/src/__new/js/view/widgets/WidgetFloater.html
+++ b/src/__new/js/view/widgets/WidgetFloater.html
@@ -1,9 +1,13 @@
 <div id="floater-{{widgetId}}" class="floater floating-window {{floaterClass}}">
 	<div class="floater-header">
-		<span>{{name}}</span>
+		<div class="floater-header-title">{{name}}</div>
 		<div class="floater-tools-container">
 			<div title="{{minimise}}" class="floater-tool widget-minimise">
-				<img alt="{{minimise}}" src="{{minimiseSrc}}"/>
+				<!--<img alt="{{minimise}}" src="{{minimiseSrc}}"/>-->
+				<span class="fa-stack">
+					  <i class="fa fa-square-o fa-stack-2x"></i>
+					  <i class="fa fa-window-minimize fa-stack-1x"></i>
+				</span>
 			</div>
 		</div>
 	</div>
