--- a/src/__new/js/view/widgets/WidgetFloater.html
+++ b/src/__new/js/view/widgets/WidgetFloater.html
@@ -9,6 +9,12 @@
 					  <i class="fa fa-window-minimize fa-stack-1x"></i>
 				</span>
 			</div>
+			<div title="{{expand}}" class="floater-tool widget-expand">
+				<i class="fa fa-expand"></i>
+			</div>
+			<div title="{{compress}}" class="floater-tool widget-compress">
+				<i class="fa fa-compress"></i>
+			</div>
 		</div>
 	</div>
 	<div class="floater-warning">
