--- a/src/__new/js/view/widgets/Widget.css
+++ b/src/__new/js/view/widgets/Widget.css
@@ -275,6 +275,10 @@ body.mode-3d .floater.only-3d.open {
 .floater.active {
     z-index: 10001;
 }
+.floater.active.expanded {
+    z-index: 50000;
+}
+
 .floater.inverse .floater-header {
     background: rgba(255,255,255,.9);
     color: #444;
