new login window view

--- a/src/__new/js/view/components/Button/Button.css
+++ b/src/__new/js/view/components/Button/Button.css
@@ -1,16 +1,16 @@
 .component-button {
-	border: 2px solid rgb(90,95,100);
+	border: .1rem solid rgb(65,69,81);
 	border-radius: .15rem;
-	color: rgb(70,75,80);
+	color: rgb(33,38,53);
 	cursor: pointer;
 	font-size: .9rem;
 	font-weight: 600;
-	line-height: 1.8rem;
+	line-height: 1.9rem;
 	transition: background .3s ease-in-out;
 	width: 8rem;
 }
 .component-button:hover {
-	background: rgba(90,95,100,.15);
+	background: rgba(65,69,81,.15);
 }
 
 /* text */
@@ -19,7 +19,7 @@
 }
 .component-button.text-small {
 	font-size: .8rem;
-	line-height: 1.6rem;
+	line-height: 1.7rem;
 }
 
 /* widths */
