--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -693,13 +693,13 @@ html.dromas body.intro #intro-overlay {
 #top-toolbar .item.open {
     /* background: #ffe6e9; */
     background-color: #FCFCFA;
-    color: #c92d42;
+    color: rgba(186,65,91,1);
 }
 body.mode-3d #top-toolbar-3dmap {
 	background-color: #FCFCFA;
 }
 body.mode-3d #top-toolbar-3dmap:not(.world-wind-2d) {
-    color: #c92d42;
+    color: rgba(186,65,91,1);
 }
 #top-toolbar .item:not(.disabled) {
 	cursor: pointer;
@@ -784,7 +784,7 @@ body.mode-3d #top-toolbar-3dmap:not(.world-wind-2d) {
 	content: '\f1e0';
 }
 #top-toolbar .item#top-toolbar-share-view.open::before {
-	color: #c92d42;
+	color: rgba(186,65,91,1);
 }
 #top-toolbar .item#top-toolbar-context-help::before {
 	background: url('../images/icons/context-help.svg') center center no-repeat;
