--- a/src/__new/js/view/Tour/snowTour/snowLegs.html
+++ b/src/__new/js/view/Tour/snowTour/snowLegs.html
@@ -22,7 +22,7 @@
 </li>
 <li data-el='#scope-config-area' data-iframe='#snow-iframe' data-orientation='top' data-highlight="true">
 	<h5>Select Area</h5>
-	<p>Select Area of Interest (AOI) from the list of European countries. </p>
+	<p>You can select Area of Interest (AOI) from the list of European countries or use whole Europe as AOI.</p>
 	<div class="tourbus-buttons">
 		<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-prev'>Previous</a>
 		<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-next'>Next</a>
@@ -40,8 +40,8 @@
 	</div>
 </li>
 <li data-el='#scope-config-time-range' data-iframe='#snow-iframe' data-orientation='top'  data-highlight="true">
-	<h5>Select Time Range</h5>
-	<p>Select Time range by setting a ‘Start’ and ‘End’ date. The longer the period the longer the proccessing time.
+	<h5>Select Season</h5>
+	<p>Select winter season. Start and end day of the season may differ depending to selected sensors.
 	</p>
 	<div class="tourbus-buttons">
 		<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-prev'>Previous</a>
